--- a/WebProjects/PR_Self-(html-css-js)/portf.html
+++ b/WebProjects/PR_Self-(html-css-js)/portf.html
@@ -123,30 +123,30 @@
             <div class="content portfolio--content">
                 <div class="item" data-aos="fade-down" data-aos-offset="270">
                     <h3>Bibliotek - Online Bookshelf</h3>
-                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/OnlineBookshelf"><img src="proj1.png" alt="logo design"></a>
+                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/ONLINE_BOOKSHELF-(html-css-nodeJS-bstrap)"><img src="proj1.png" alt="logo design"></a>
                 </div>
                 <div class="item" data-aos="fade-left" data-aos-offset="270">
                     <h3>Weather App</h3>
-                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/Project_WeatherApp"><img src="proj2.png" alt="logo design" data-aos-offset="270"></a>
+                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/PR_WeatherApp-(nodeJS-html-css)"><img src="proj2.png" alt="logo design" data-aos-offset="270"></a>
                 </div>
 
                 <div class="item" data-aos="fade-up" data-aos-offset="170">
                     <h3>Project Quote</h3>
-                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/PROJECT_QUOTE"><img src="proj4.png" alt="logo design"></a>
+                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/PR_Quote-(html-css-js)"><img src="proj4.png" alt="logo design"></a>
                 </div>
                 
                 <div class="item" data-aos="fade-right" data-aos-offset="270">
                     <h3>Project Academy</h3>
-                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/Project_DanceAcademy"><img src="proj6.png" alt="logo design"></a>
+                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/PR_DanceAcademy-(html-css-node-mongoDB)"><img src="proj6.png" alt="logo design"></a>
                 </div>
                 
                 <div class="item" data-aos="fade-right" data-aos-offset="270">
                     <h3>Pokedex Online</h3>
-                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/Project_Pokedex"><img src="proj5.png" alt="logo design"></a>
+                    <a target="_blank" href="https://github.com/iamhk12/Projects/tree/main/WebProjects/PR_Pokedex-(html-css-js)"><img src="proj5.png" alt="logo design"></a>
                 </div>
 
                 <div class="item" data-aos="fade-right" data-aos-offset="270">
-                    <h3>Various templates and designs</h3>
+                    <h3>MORE...</h3>
                     <a target="_blank" href="https://github.com/iamhk12/Projects"><img src="proj3.png" alt="logo design"></a>
                 </div>
             </div>
